# GamedevLessons

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
LearnHoudini-01/: LearnHoudini.hip  LearnHoudini.py
LearnMetal-01/LearnMetal/: AppDelegate.swift  ViewController.swift
LearnMetal-01/LearnMetal.xcodeproj/: project.pbxproj
LearnMetal-01/LearnMetal.xcodeproj/project.xcworkspace/xcuserdata/kevintsuixu.xcuserdatad/: UserInterfaceState.xcuserstate
LearnMetal-01/LearnMetal.xcodeproj/xcuserdata/kevintsuixu.xcuserdatad/xcschemes/: xcschememanagement.plist
LearnMetal-01/LearnMetal/Assets.xcassets/AppIcon.appiconset/: Contents.json
LearnMetal-01/LearnMetal/Assets.xcassets/IMG_LOGO.imageset/: Contents.json
LearnMetal-02/LearnMetal/: SceneDelegate.swift  Shaders.metal  ViewController.swift
LearnMetal-02/LearnMetal.xcodeproj/: project.pbxproj
LearnMetal-02/LearnMetal.xcodeproj/project.xcworkspace/xcuserdata/kevintsuixu.xcuserdatad/: UserInterfaceState.xcuserstate
LearnMetal-02/LearnMetal/Base.lproj/: LaunchScreen.storyboard
LearnVulkan-01/: CMakeLists.txt
LearnVulkan-01/empty_window/: empty_window.cpp
LearnVulkan-02/: CMakeLists.txt
LearnVulkan-02/draw_the_triangle/: draw_the_triangle.cpp
LearnVulkan-03/: CMakeLists.txt
LearnVulkan-03/draw_with_buffers/: draw_with_buffers.cpp
LearnVulkan-03/draw_with_buffers/shaders/: draw_with_buffers.frag  draw_with_buffers.vert
LearnVulkan-03/draw_with_uniformbuffer/: draw_with_uniformbuffer.cpp
LearnVulkan-04/: CMakeLists.txt
LearnVulkan-04/draw_with_texture/: draw_with_texture.cpp
LearnVulkan-04/draw_with_texture/shaders/: draw_with_texture.frag  draw_with_texture.vert
LearnVulkan-05/: CMakeLists.txt
LearnVulkan-05/draw_the_scene/: draw_the_scene.cpp
LearnVulkan-05/draw_the_scene/shaders/: draw_the_scene.frag  draw_the_scene.vert  draw_the_scene_bg.frag  draw_the_scene_bg.vert
LearnVulkan-06/: CMakeLists.txt
LearnVulkan-06/draw_with_PBR/: draw_with_PBR.cpp
LearnVulkan-06/draw_with_PBR/appicons/: vulkan_renderer.icns
LearnVulkan-06/draw_with_PBR/shaders/: draw_with_PBR.frag  draw_with_PBR.vert  draw_with_PBR_bg.frag  draw_with_PBR_bg.vert  draw_with_PBR_legacy.frag
LearnVulkan-07/: CMakeLists.txt
LearnVulkan-07/draw_with_shadow/: draw_with_shadow.cpp
LearnVulkan-07/draw_with_shadow/shaders/: draw_with_shadow_base.frag  draw_with_shadow_base.vert  draw_with_shadow_base_frag.spv  draw_with_shadow_base_vert.spv  draw_with_shadow_bg.vert  draw_with_shadow_bg_frag.spv  draw_with_shadow_bg_vert.spv  draw_with_shadow_sm_frag.spv  draw_with_shadow_sm_vert.spv
LearnVulkan-08/: CMakeLists.txt
LearnVulkan-08/draw_with_indirect/: draw_with_indirect.cpp
LearnVulkan-08/draw_with_indirect/shaders/: draw_with_indirect_base.frag  draw_with_indirect_base.vert  draw_with_indirect_bg.frag  draw_with_indirect_sm.frag  draw_with_indirect_sm.vert
LearnVulkan-08/draw_with_instance/: draw_with_instance.cpp
LearnVulkan-08/draw_with_instance/appicons/: vulkan_renderer.icns
LearnVulkan-08/draw_with_instance/shaders/: draw_with_instance_base.frag  draw_with_instance_base_instanced.vert  draw_with_instance_sky.frag  draw_with_instance_sky.vert  draw_with_instance_sm_instanced.vert
