cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
cmake_policy(VERSION 3.5)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

set(PROJNAME LearnVulkan)

project(${PROJNAME})

include_directories(Third_Party)
include_directories(Third_Party/glfw)
include_directories(Third_Party/glm)
include_directories(Third_Party/stb)
include_directories(Third_Party/tinyobjloader)

# Use FindVulkan module added with CMAKE 3.7
if(NOT CMAKE_VERSION VERSION_LESS 3.7.0)
	message(STATUS "Using module to find Vulkan")
	find_package(Vulkan)
endif()

if(UNIX AND NOT APPLE)
	set(LINUX TRUE)
endif()

if(LINUX)
	OPTION(USE_D2D_WSI "Build the project using Direct to Display swapchain" OFF)
	OPTION(USE_DIRECTFB_WSI "Build the project using DirectFB swapchain" OFF)
	OPTION(USE_WAYLAND_WSI "Build the project using Wayland swapchain" OFF)
	OPTION(USE_HEADLESS "Build the project using headless extension swapchain" OFF)
endif()

if(WIN32)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WIN32_KHR")
elseif(LINUX)
	find_package(Threads REQUIRED)
	if(USE_D2D_WSI)
		MESSAGE("Using direct to display extension...")
		add_definitions(-D_DIRECT2DISPLAY)
	elseif(USE_DIRECTFB_WSI)
		find_package(DirectFB REQUIRED)
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_DIRECTFB_EXT")
		include_directories(${DIRECTFB_INCLUDE_DIR})
	elseif(USE_WAYLAND_WSI)
		find_program(PKG_CONFIG pkg-config)
		if(NOT PKG_CONFIG)
			message(FATAL_ERROR "pkg-config binary not found")
		endif()
		find_package(Wayland REQUIRED)
		if(NOT WAYLAND_FOUND)
			message(FATAL_ERROR "Wayland development package not found")
		endif()
		pkg_check_modules(WAYLAND_PROTOCOLS REQUIRED wayland-protocols)
		if(NOT WAYLAND_PROTOCOLS_FOUND)
			message(FATAL_ERROR "Wayland protocols package not found")
		endif()
		find_program(WAYLAND_SCANNER wayland-scanner)
		if(NOT WAYLAND_SCANNER)
			message(FATAL_ERROR "wayland-scanner binary not found")
		endif()
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_WAYLAND_KHR")
		include_directories(${WAYLAND_INCLUDE_DIR})
		pkg_get_variable(protocol_dir wayland-protocols pkgdatadir)
		execute_process(COMMAND ${WAYLAND_SCANNER} client-header ${protocol_dir}/stable/xdg-shell/xdg-shell.xml ${CMAKE_BINARY_DIR}/xdg-shell-client-protocol.h
				COMMAND ${WAYLAND_SCANNER} private-code ${protocol_dir}/stable/xdg-shell/xdg-shell.xml ${CMAKE_BINARY_DIR}/xdg-shell-protocol.c)
		include_directories(${CMAKE_BINARY_DIR})
	elseif(USE_HEADLESS)
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_HEADLESS_EXT")
	else(USE_D2D_WSI)
		find_package(XCB REQUIRED)
		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_XCB_KHR")
	endif(USE_D2D_WSI)
elseif(APPLE)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_MACOS_MVK -DVK_EXAMPLE_XCODE_GENERATED")
	# Todo : android?
endif(WIN32)

if(NOT Vulkan_FOUND)
	message(FATAL_ERROR "Could not find Vulkan library!")
else()
	message(STATUS "Vulkan include dir: ${Vulkan_INCLUDE_DIRS}")
	include_directories(${Vulkan_INCLUDE_DIRS})
	message(STATUS "Vulkan library dir: ${Vulkan_LIBRARY}")
endif()

# Set preprocessor defines
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNOMINMAX -D_USE_MATH_DEFINES")

# Clang specific stuff
if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-switch-enum")
endif()

add_definitions(-D_CRT_SECURE_NO_WARNINGS)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Compiler specific stuff
if(MSVC)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc")
elseif(APPLE)
	if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fobjc-arc -ObjC++")
	else()
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fobjc-arc -xobjective-c++")
	endif()
endif(MSVC)

if(WIN32)
	# Nothing here (yet)
elseif(APPLE)
	link_libraries(${Vulkan_LIBRARY} "-framework AppKit" "-framework QuartzCore")
else(WIN32)
	link_libraries(${XCB_LIBRARIES} ${Vulkan_LIBRARY} ${Vulkan_LIBRARY} ${DIRECTFB_LIBRARIES} ${WAYLAND_CLIENT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
endif(WIN32)

set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

add_subdirectory(Third_Party/glfw)
add_subdirectory(Third_Party/glm)
add_subdirectory(Third_Party/tinyobjloader)
add_subdirectory(LearnVulkan-01)
add_subdirectory(LearnVulkan-02)
add_subdirectory(LearnVulkan-03)
add_subdirectory(LearnVulkan-04)
add_subdirectory(LearnVulkan-05)
add_subdirectory(LearnVulkan-06)
add_subdirectory(LearnVulkan-07)
add_subdirectory(LearnVulkan-08)